styles/styles.css
/*Add this universal selector for margin, padding and box-sizing to easily control the layout of the page. */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 16px;
    font-family: Roboto, Arial, sans-serif;
}

nav {
    background-color: steelblue;
    padding: 1rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;


}

nav a {

    display: block;
    padding: 0.5rem;
    text-decoration: none;
    color: white;
    font-size: 1.2rem;
    font-weight: 700;
}

h1 {
    color: steelblue;
    border-bottom: 1px solid steelblue;
}

main img {
    float: right;
    width: 150px;
    height: auto;
    border: 1px solid steelblue;
    padding: 2px;
    box-shadow: 0 0 3px gray;
}

p {
    margin: 1rem;
}

.grid {
    display: grid;
    align-items: center;
}

main {
    grid-column: 2 / 3;
    margin: 1rem;

}

aside {
    width: 20em;
    position: relative;
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    text-align: center;
    margin: 1rem;
    border: 1px solid rgba(0 0 0 / 0.2);
    padding: 10px;
    box-shadow: 0 0 3px gray;
    background-color:aqua;
    color:#fff;

}

aside img {
    width: 200px;
    height: auto;
}

aside h2 {
    position: absolute;
    top: 95px;
    left: 70px;
}


header, .grid, footer {

    max-width: 100%;
    margin: 0;

    border-top: 1px solid rgba(0 0 0 / 0.2);
    text-align: center;
}


/* Class Selectors */
.box {
    margin: 1rem;
    border: 1px solid rgba(0, 0, 0, .1);
    padding: 1rem;
    background-color: #eee;
    color: #000;
}

